--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 [dependencies]
 alloy-sol-types = "0.7.2"
 sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.7-testnet" }
+tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = [
+  "keccak",
+] }
