--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -9,8 +9,8 @@ name = "prove"
 path = "src/bin/prove.rs"
 
 [dependencies]
-# sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.7-testnet" }
-sp1-sdk = { path = "../../../infra/sp1/sdk" }
+sp1-sdk = { path = "../../../infra/sp1/sdk", features = ["native-gnark"] }
+# sp1-sdk = { path = "../../../infra/sp1/sdk" }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 clap = { version = "4.0", features = ["derive", "env"] }
