--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -23,6 +23,7 @@ tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "pa
 ] }
 hex = {version = "0.4.3"}
 rand = "0.8.5"
+anyhow = {version = "1.0.86"}
 
 [build-dependencies]
 # sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.7-testnet" }
