--- a/p3agg/Cargo.toml
+++ b/p3agg/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "base_sp1_p3"
+name = "p3agg"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,18 +7,11 @@ edition = "2021"
 p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", features = [
   "nightly-features",
 ], rev = "88ea2b866e41329817e4761429b4a5a2a9751c07" }
+p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git", rev = "88ea2b866e41329817e4761429b4a5a2a9751c07" }
+p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git", rev = "88ea2b866e41329817e4761429b4a5a2a9751c07" }
 p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "88ea2b866e41329817e4761429b4a5a2a9751c07" }
 p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", rev = "88ea2b866e41329817e4761429b4a5a2a9751c07" }
-p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "88ea2b866e41329817e4761429b4a5a2a9751c07" }
-p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git", rev = "88ea2b866e41329817e4761429b4a5a2a9751c07" }
-p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git", rev = "88ea2b866e41329817e4761429b4a5a2a9751c07" }
 
+sp1-zkvm = { path = "../../../infra/sp1/zkvm/entrypoint" }
 sp1-core = { path = "../../../infra/sp1/core"}
 sp1-recursion-core ={ path = "../../../infra/sp1/recursion/core"}
-
-itertools ={ version = "0.13.0"}
-anyhow ={ version = "1.0.86"}
-
-[dev-dependencies]
-rand = "0.8.5"
-zkhash = { git = "https://github.com/HorizenLabs/poseidon2" }
