--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 alloy-sol-types = "0.7.2"
 # sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.7-testnet" }
 sp1-zkvm = { path = "../../../infra/sp1/zkvm/entrypoint" }
-sp1-precompiles = { path = "../../../infra/sp1/zkvm/precompiles" }
+sp1-lib = { path = "../../../infra/sp1/zkvm/lib" , features = ["secp256k1"]}
 tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = [
   "keccak",
 ] }
