--- a/sp1eip712/Cargo.toml
+++ b/sp1eip712/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 sp1-zkvm = { path = "../../../infra/sp1/zkvm/entrypoint" }
-sp1-precompiles = { path = "../../../infra/sp1/zkvm/precompiles" }
+sp1-lib = { path = "../../../infra/sp1/zkvm/lib" , features = ["secp256k1"]}
 tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = [
   "keccak",
 ] }
