--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -8,8 +8,8 @@ name = "prove"
 path = "src/bin/prove.rs"
 
 [dependencies]
-# sp1-sdk = { path = "../../../infra/sp1/sdk" , features = ["native-gnark"]}
-sp1-sdk = { path = "../../../infra/sp1/sdk" }
+sp1-sdk = { path = "../../../infra/sp1/sdk" , features = ["native-gnark"]}
+# sp1-sdk = { path = "../../../infra/sp1/sdk" }
 sp1-core ={ path = "../../../infra/sp1/core"}
 
 p3-baby-bear = { version = "0.1.3-succinct", features = ["nightly-features"] }
